# pe-sieve

./: .appveyor.yml  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.bak  Doxyfile  LICENSE  README.md  _r_e_a_d_m_e_8md.html  annotated.html  artefact__scanner_8cpp.html  artefact__scanner_8cpp_source.html  artefact__scanner_8h.html  artefact__scanner_8h_source.html  artefacts__util_01-_01_copy_8cpp.html  artefacts__util_01-_01_copy_8cpp_source.html  artefacts__util_8cpp.html  artefacts__util_8cpp_a0ff3d40803977ccccad00886baf51d1d_cgraph.map  artefacts__util_8cpp_a0ff3d40803977ccccad00886baf51d1d_cgraph.md5  artefacts__util_8cpp_a58de2bb885868b1f1b1b99cd9a165d20_cgraph.map  artefacts__util_8cpp_a58de2bb885868b1f1b1b99cd9a165d20_cgraph.md5  artefacts__util_8cpp_a732ab847c71e79e35e693719ee6ee8b2_cgraph.map  artefacts__util_8cpp_a732ab847c71e79e35e693719ee6ee8b2_cgraph.md5  artefacts__util_8cpp_aa22e211ecbeaf3b787a5609e460a1657_cgraph.map  artefacts__util_8cpp_aa22e211ecbeaf3b787a5609e460a1657_cgraph.md5  artefacts__util_8cpp_aefa2bfa325006cff2d8ee80d05280882_cgraph.map  artefacts__util_8cpp_aefa2bfa325006cff2d8ee80d05280882_cgraph.md5  artefacts__util_8cpp_source.html  artefacts__util_8h.html  artefacts__util_8h_source.html  basic__buffer_8h.html  basic__buffer_8h_source.html  bindings_2_r_e_a_d_m_e_8md.html  byte__buffer_8h.html  byte__buffer_8h_source.html  class_dbg_help_wrapper-members.html  class_dbg_help_wrapper.html  class_p_esieve_params-members.html  class_p_esieve_params.html  class_p_esieve_params__inherit__graph.map  (+2254 more)
.github/workflows/: main.yml
bindings/: README.md
bindings/golang/pesieve/: go.mod  pesieve.go
bindings/python/: demo.py  pesieve.py
include/: pe_sieve_api.h  pe_sieve_reports.h  pe_sieve_return_codes.h  pe_sieve_types.h  pe_sieve_ver_short.h  pe_sieve_version.h
params_info/: params_dump.cpp  params_dump.h  pe_sieve_params_info.cpp  pe_sieve_params_info.h
peloader/: pe_hdrs_helper.cpp  pe_hdrs_helper.h  pe_raw_to_virtual.cpp  pe_raw_to_virtual.h  pe_virtual_to_raw.cpp  pe_virtual_to_raw.h  relocate.cpp  relocate.h  util.cpp  util.h
postprocessors/: dump_report.cpp  dump_report.h  iat_block.cpp  iat_block.h  iat_finder.cpp  iat_finder.h  imp_reconstructor.cpp  imp_reconstructor.h  import_table_finder.cpp  pe_buffer.cpp  pe_buffer.h  pe_reconstructor.cpp  pe_reconstructor.h  report_formatter.cpp  report_formatter.h  results_dumper.cpp  results_dumper.h
postprocessors/imp_rec/: iat_block.cpp  iat_block.h  iat_finder.cpp  iat_finder.h  imp_reconstructor.cpp  imp_reconstructor.h  import_table_finder.cpp  import_table_finder.h
scanners/: artefact_scanner.cpp  artefact_scanner.h  code_scanner.cpp  code_scanner.h  headers_scanner.cpp  headers_scanner.h  hollowing_scanner.cpp  hollowing_scanner.h  hook_scanner.cpp  hook_scanner.h  hook_targets_resolver.cpp  hook_targets_resolver.h  iat_scanner.cpp  iat_scanner.h  mapping_scanner.cpp  mapping_scanner.h  mempage_data.cpp  mempage_data.h  mempage_scanner.cpp  mempage_scanner.h  module_cache.cpp  module_cache.h  module_data.cpp  module_data.h  module_scan_report.h  module_scanner.cpp  module_scanner.h  patch_analyzer.cpp  patch_analyzer.h  patch_list.cpp  patch_list.h  pattern_finder.cpp  pattern_finder.h  pe_section.h  process_details.h  process_feature_scanner.h  scan_report.cpp  scan_report.h  scanned_modules.cpp  scanned_modules.h  (+6 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  defines_0.js  (+101 more)
stats/: args_converter.h  entropy.h  entropy_stats.h  multi_stats.h  stats.h  stats_analyzer.cpp  stats_analyzer.h  stats_util.h  std_dev_calc.h
stats/stat_calculator/: CMakeLists.txt  main.cpp
utils/: artefacts_util - Copy.cpp  artefacts_util.cpp  artefacts_util.h  basic_buffer.h  byte_buffer.h  code_patterns.h  console_color.cpp  console_color.h  crc32.h  custom_buffer.h  custom_mutex.h  data_buffer.h  dbg_help_wrapper.cpp  dbg_help_wrapper.h  entropy.h  format_util.cpp  format_util.h  modules_enum.cpp  modules_enum.h  ntddk.h  path_converter.cpp  path_converter.h  path_util.cpp  path_util.h  pattern_tree.h  process_minidump.cpp  process_minidump.h  process_privilege.cpp  process_privilege.h  process_reflection.cpp  process_reflection.h  process_symbols.h  process_util.cpp  process_util.h  stats.h  stats_analyzer.cpp  stats_analyzer.h  std_dev_calc.h  strings_util.cpp  strings_util.h  (+8 more)
utils/stat_calculator/: CMakeLists.txt  main.cpp  std_dev_calc.h
